# dtks

./: CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml
examples/: ant_simulator.ipynb
src/: ants.cpp  ants.hpp  conf.hpp  dtks_ext.cpp  image.hpp  main.cpp  particle_life.cpp  particle_life.hpp  particle_life_main.cpp  tiny_vector.hpp
src/dtks/: __init__.py
